k8s/semaphore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: semaphore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: semaphore

  template:
    metadata:
      labels:
        app: semaphore

    spec:
      enableServiceLinks: false

      containers:
        - name: semaphore
          image: semaphoreui/semaphore:v2.13.10

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: semaphore-data
              mountPath: /var/lib/semaphore

      volumes:
        - name: semaphore-data
          persistentVolumeClaim:
            claimName: semaphore-data
