k8s/semaphore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  namespace: semaphore

  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik

  rules:
    - host: semaphore.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore
                port:
                  number: 3000
