k8s/semaphore/semaphore.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: semaphore

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: semaphore
spec:
  replicas: 1

  selector:
    matchLabels:
      app: semaphore

  template:
    metadata:
      labels:
        app: semaphore

    spec:
      enableServiceLinks: false

      containers:
        - name: semaphore
          image: semaphoreui/semaphore:v2.13.10

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: semaphore-data
              mountPath: /var/lib/semaphore

      volumes:
        - name: semaphore-data
          persistentVolumeClaim:
            claimName: semaphore-data

---
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
spec:
  selector:
    app: semaphore

  ports:
    - name: http
      port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
  namespace: semaphore

  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik

  rules:
    - host: semaphore.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore-lb
  namespace: semaphore
spec:
  type: LoadBalancer

  selector:
    app: semaphore

  ports:
    - name: http
      port: 3030
      targetPort: 3000
